--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -6,7 +6,45 @@
     <title>Calculadora con java y bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
+  <div class="container py-5">
+    <h2 class="text-center mb-4">Calculadora Básica</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card p-4">
+         <input type="text" id="input" class="form-control mb-3 text-end" placeholder="Ingrese un número" readonly>
+         <div id="operation" class="text-center mb-2 text-primary fw-bold"></div>
+
+         <!-- Botones numéricos -->
+         <div class="row g-2">
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(1)">1</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(2)">2</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(3)">3</button></div>
+
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(4)">4</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(5)">5</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(6)">6</button></div>
+
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(7)">7</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(8)">8</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(9)">9</button></div>
+
+         <div class="col-4"><button class="btn btn-danger w-100" onclick="clearInput()">C</button></div>
+         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(0)">0</button></div>
+         <div class="col-4"><button class="btn btn-success w-100" onclick="calculateResult()">=</button></div>
+         </div>
+
+         <!-- Botones de operaciones -->
+         <div class="row g-2 mt-2">
+         <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('+')">+</button></div>
+         <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('-')">-</button></div>
+         <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('*')">×</button></div>
+         <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('/')">÷</button></div>
+        </div> 
+    </div>
+    
+
+
     
 </body>
 </html>
