--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -14,8 +14,8 @@
         <div class="card p-4">
          <input type="text" id="input" class="form-control mb-3 text-end" placeholder="Ingrese un número" readonly>
          <div id="operation" class="text-center mb-2 text-primary fw-bold"></div>
-
-         <!-- Botones numéricos -->
+         <div class="row row-cols-4 g-2" id="buttons-numbers"></div>
+         
          <div class="row g-2">
          <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(1)">1</button></div>
          <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(2)">2</button></div>
@@ -41,6 +41,11 @@
          <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('*')">×</button></div>
          <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('/')">÷</button></div>
         </div> 
+        <!-- Boton para limpiar pantalla -->
+        <div class="row g-2 mt-2">
+            <div class="col"><button class="btn btn-success w-100" onclick="calculate()">=</button></div>
+            <div class="col"><button class="btn btn-secondary w-100" onclick="clearAll()">Limpiar</button></div>
+          </div>
     </div>
     
 
