--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora con java y bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="calculadora.css">
 </head>
 <body class="bg-light">
   <div class="container py-5">
@@ -40,14 +41,15 @@
          <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('-')">-</button></div>
          <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('*')">×</button></div>
          <div class="col"><button class="btn btn-warning w-100" onclick="chooseOperation('/')">÷</button></div>
-        </div> 
-        <!-- Boton para limpiar pantalla -->
-        <div class="row g-2 mt-2">
+         </div> 
+         <!-- Boton para limpiar pantalla -->
+         <div class="row g-2 mt-2">
             <div class="col"><button class="btn btn-success w-100" onclick="calculate()">=</button></div>
-            <div class="col"><button class="btn btn-secondary w-100" onclick="clearAll()">Limpiar</button></div>
-          </div>
+         <div class="col"><button class="btn btn-secondary w-100" onclick="clearAll()">Limpiar</button></div>
+        </div>
     </div>
     
+    <script src="calculadora.js"></script>
 
 
     
