--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -29,10 +29,7 @@
          <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(7)">7</button></div>
          <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(8)">8</button></div>
          <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(9)">9</button></div>
-
-         <div class="col-4"><button class="btn btn-danger w-100" onclick="clearInput()">C</button></div>
-         <div class="col-4"><button class="btn btn-secondary w-100" onclick="appendNumber(0)">0</button></div>
-         <div class="col-4"><button class="btn btn-success w-100" onclick="calculateResult()">=</button></div>
+         <div class="col-12"><button class="btn btn-secondary w-100" onclick="appendNumber(0)">0</button></div>
          </div>
 
          <!-- Botones de operaciones -->
@@ -45,7 +42,7 @@
          <!-- Boton para limpiar pantalla -->
          <div class="row g-2 mt-2">
             <div class="col"><button class="btn btn-success w-100" onclick="calculate()">=</button></div>
-         <div class="col"><button class="btn btn-secondary w-100" onclick="clearAll()">Limpiar</button></div>
+         <div class="col"><button class="btn btn-secondary w-100" onclick="clearAll()">C</button></div>
         </div>
     </div>
     
